[package]
name = "rvm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "rvm"
path = "src/lib.rs"

[[bin]]
name = "rvm"
path = "src/main.rs"
