[package]
name = "rvm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core runtime
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Existing crypto
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
hex = "0.4"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GhostChain ecosystem integration
gquic = { git = "https://github.com/ghostkellz/gquic", features = ["gcc-crypto"], optional = true }
gcrypt = { git = "https://github.com/ghostkellz/gcrypt", optional = true }
etherlink = { git = "https://github.com/ghostkellz/etherlink", optional = true }

# Additional blockchain primitives
uuid = "1.0"
dashmap = "5.5"
parking_lot = "0.12"

[lib]
name = "rvm"
path = "src/lib.rs"

[[bin]]
name = "rvm"
path = "src/main.rs"

[features]
default = ["ghostchain-integration"]
ghostchain-integration = ["gquic", "gcrypt", "etherlink", "identity", "cns", "tokens"]
identity = ["gcrypt"]
cns = ["etherlink"]
tokens = ["multi-token-gas"]
multi-token-gas = []
l2-optimization = ["parallel-execution"]
parallel-execution = []
